Fix overflow-x

--- a/src/sass/general/various.scss
+++ b/src/sass/general/various.scss
@@ -3,6 +3,7 @@ html {
     min-height: 100vh;
     padding-bottom: 70px;
     font-size: 18px;
+    overflow-x: hidden;
 }
 body {
     font-family: $truUltra;
